<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getstart">

    <!-- Welcome Title -->
<TextView
    android:id="@+id/welcomeTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="32dp" />

<!-- Illustration -->
    <ImageView
        android:id="@+id/illustration"
        android:layout_width="422dp"
        android:layout_height="341dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/screen1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />


    <!-- Description -->
    <TextView
        android:id="@+id/titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_ultimate_ice_cream_paradise_right_in_your_pocket"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/illustration" />

    <!-- Start Now Button -->
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/a_big_creamy_ice_cream_scoop_sits_atop_a_crisp_waffle_cone_glistening_invitingly_colorful_sprinkles_are_scattered_over_it_adding_a_playful_and_fun_touch_at_the_top_a_smiling_face_gives_it_a_cheerful_friendly_personality_making_it_impossible_not_to_smile"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illustration" />

    <Button
    android:id="@+id/startNowButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/start_now"
    android:backgroundTint="@color/pink"
    android:textColor="@android:color/white"
    app:layout_constraintTop_toBottomOf="@id/description"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
