<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getstart3">

    <!-- Welcome Title -->
    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_your_favorites"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Illustration -->

    <TextView
        android:id="@+id/titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/fast_delivery_to_your_doorstep_treat_yourself_anytime"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illustration" />

    <!-- Description -->

    <!-- Start Now Button -->

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="346dp"
        android:layout_height="305dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/icecream3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/freshly_packed_ice_creams_arrive_at_your_doorstep_in_no_time_ensuring_maximum_delight_the_quick_delivery_keeps_every_scoop_cool_creamy_and_ready_to_enjoy_it_s_speed_freshness_and_happiness_all_delivered_with_a_smile"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illustration" />

    <Button
        android:id="@+id/startNowButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/pink"
        android:text="@string/get_started"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />



</androidx.constraintlayout.widget.ConstraintLayout>