<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getstart2">





    <!-- Welcome Title -->
    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover_every_flavor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Illustration -->

    <TextView
        android:id="@+id/titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/from_classic_vanilla_to_exotic_new_tastes_we_ve_got_it_all"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illustration" />

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="416dp"
        android:layout_height="330dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/icecream1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />

    <!-- Description -->

    <!-- Start Now Button -->

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/a_tall_waffle_cone_holds_a_delightful_tower_of_ice_cream_scoops_each_in_vibrant_mouthwatering_colors_from_creamy_vanilla_to_rich_chocolate_and_playful_strawberry_every_layer_looks_irresistible_the_mix_of_shades_creates_a_joyful_eye_catching_treat_that_feels_both_fun_and_delicious"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illustration" />

    <Button
        android:id="@+id/startNowButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/pink"
        android:text="@string/next"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />


</androidx.constraintlayout.widget.ConstraintLayout>