<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".item">


    <!-- Item Detail Title -->


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/itemdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/details"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="362dp"
        android:layout_height="265dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="27dp"
        android:src="@drawable/icecream6"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemdetail" />

    <!-- Inner ConstraintLayout for Rating, Description, etc. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="415dp"
        android:layout_height="360dp"
        android:background="@color/ff9aa2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Rating TextView -->

        <!-- Item Description -->

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/neapolitan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/ratingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_4_reviews"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.801"
            app:layout_constraintStart_toEndOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <!-- Horizontal ScrollView for Categories -->
        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="366dp"
            android:layout_height="103dp"
            android:layout_marginTop="36dp"
            android:text="@string/neapolitan_ice_cream_is_a_classic_frozen_dessert_that_brings_together_three_beloved_flavors_creamy_vanilla_rich_chocolate_and_sweet_strawberry_layered_side_by_side_in_a_single_container_offering_a_perfect_balance_of_taste_and_color_in_every_scoop"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_background"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <HorizontalScrollView
            android:id="@+id/categoriesScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />


        <LinearLayout
            android:id="@+id/quantityLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/priceText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoriesScrollView">

            <Button
                android:id="@+id/buttonDecrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:backgroundTint="@color/black"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="+"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="20dp" />

            <Button
                android:id="@+id/buttonIncrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:backgroundTint="@color/black"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="-"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginTop="12dp"
            android:text="@string/rs_350_00"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/quantityLayout"
            app:layout_constraintTop_toTopOf="@id/quantityLayout" />

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/pink"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityLayout"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
